--- a/bins/gal-gui/package.json
+++ b/bins/gal-gui/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@tauri-apps/api": "^1.0.2",
+    "@types/lodash": "^4.14.182",
     "async-mutex": "^0.3.2",
     "bootstrap-dark-5": "^1.1.3",
+    "lodash": "^4.17.21",
     "timers-promises": "^1.0.1",
     "vue": "^3.2.37",
     "vue-bs-modal": "^0.7.1",
