--- a/examples/Live2D/config.yaml
+++ b/examples/Live2D/config.yaml
@@ -22,5 +22,7 @@ paras:
       tag: show
       texts:
         - /Haru//おはよう\show{Haru}
+        - /Haru//元気ですか
         - /Hiyori//~~~ヾ(＾∇＾)おはよー♪\show{Haru}{Hiyori}
+        - /Hiyori//今日もよろしく\hide{Haru}
         - /Mao//お早う\show{Mao}
