--- a/examples/Live2D/config.yaml
+++ b/examples/Live2D/config.yaml
@@ -21,8 +21,9 @@ paras:
     -
       tag: show
       texts:
-        - /Haru//おはよう\show{Haru}
+        - /Haru//おはよう\show
         - /Haru//元気ですか
         - /Hiyori//~~~ヾ(＾∇＾)おはよー♪\show{Haru}{Hiyori}
         - /Hiyori//今日もよろしく\hide{Haru}
-        - /Mao//お早う\show{Mao}
+        - /Mao//お早う\hide
+        - /Mao//元気？\show
