Enable settings button in GameView.

--- a/examples/Live2D/config.yaml
+++ b/examples/Live2D/config.yaml
@@ -25,5 +25,5 @@ paras:
         - /Haru//元気ですか
         - /Hiyori//~~~ヾ(＾∇＾)おはよー♪\show{Haru}{Hiyori}
         - /Hiyori//今日もよろしく\hide{Haru}
-        - /Mao//お早う\hide
+        - /Mao/？？？/お早う\hide
         - /Mao//元気？\show
