--- a/utils/gal-locale/Cargo.toml
+++ b/utils/gal-locale/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cfg-if = "1.0"
-serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-anyhow = "1.0"
-
-[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
-rust_icu_sys = "2.0"
-paste = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde-xml-rs = "0.5"
+icu_locid = "1.0.0-beta1"
+icu_locid_transform = { version = "1.0.0-beta1", features = ["serde"] }
+icu_provider = { version = "1.0.0-beta1", features = ["sync"] }
+icu_provider_blob = "1.0.0-beta1"
+sys-locale = "0.2"
