Document new ICU usage.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ jobs:
   steps:
   - script: |
       sudo apt update
-      sudo apt install libwebkit2gtk-4.0-dev libicu-dev
+      sudo apt install libwebkit2gtk-4.0-dev
     condition: eq(variables.platform, 'linux-x64')
     displayName: "Install dependencies on Linux"
 
@@ -50,7 +50,7 @@ jobs:
       deb [arch=arm64] http://ports.ubuntu.com/ jammy-backports main restricted universe multiverse
       EOT
       sudo apt update
-      sudo apt install libc6-dev-i386:amd64 libc6-dev-arm64-cross:amd64 gcc-aarch64-linux-gnu:amd64 binutils-aarch64-linux-gnu:amd64 libwebkit2gtk-4.0-dev:amd64 libicu-dev:amd64 libwebkit2gtk-4.0-dev:arm64 libicu-dev:arm64
+      sudo apt install libc6-dev-i386:amd64 libc6-dev-arm64-cross:amd64 gcc-aarch64-linux-gnu:amd64 binutils-aarch64-linux-gnu:amd64 libwebkit2gtk-4.0-dev:amd64 libwebkit2gtk-4.0-dev:arm64
       mkdir .cargo
       cat >> .cargo/config <<EOF
       [target.$(target)]
