Remove ParserError wrapper.

--- a/utils/gal-locale/Cargo.toml
+++ b/utils/gal-locale/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-xml-rs = "0.5"
-icu_locid = "1.0.0-beta1"
+icu_locid = { version = "1.0.0-beta1", features = ["std"] }
 icu_locid_transform = { version = "1.0.0-beta1", features = ["serde"] }
 icu_provider = { version = "1.0.0-beta1", features = ["sync"] }
 icu_provider_blob = "1.0.0-beta1"
