Remove gal_ prefix for some crates.

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-    "gal-fallback",
-    "gal-locale",
+    "fallback",
+    "locale",
     "gal-primitive",
     "gal-runtime",
     "gal-script",
