--- a/utils/gal-bindings-types/Cargo.toml
+++ b/utils/gal-bindings-types/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
 edition = "2021"
 
 [dependencies]
-gal-fallback = { path = "../gal-fallback" }
+fallback = { path = "../fallback" }
 gal-script = { path = "../gal-script" }
 serde = { version = "1.0", features = ["derive"] }
 log = { version = "0.4", features = ["serde"] }
