--- a/utils/gal-runtime/Cargo.toml
+++ b/utils/gal-runtime/Cargo.toml
@@ -8,6 +8,7 @@ gal-bindings-types = { path = "../gal-bindings-types" }
 gal-script = { path = "../gal-script" }
 fallback = { path = "../fallback" }
 locale = { path = "../locale" }
+progress-future = { path = "../progress-future" }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
@@ -16,8 +17,8 @@ anyhow = "1.0"
 wasmer = "2.3"
 wasmer-wasi = "2.3"
 unicode-width = "0.1"
-tokio = { version = "1", features = ["fs", "macros", "sync"] }
-tokio-stream = { version = "0.1", features = ["fs", "sync"] }
+tokio = { version = "1", features = ["fs", "macros"] }
+tokio-stream = { version = "0.1", features = ["fs"] }
 pin-project = "1.0"
 dirs = "4.0"
 
