Add more tests to test proc macros.

--- a/utils/progress-future/Cargo.toml
+++ b/utils/progress-future/Cargo.toml
@@ -10,4 +10,5 @@ tokio-stream = "0.1"
 pin-project = "1.0"
 
 [dev-dependencies]
+anyhow = "1.0"
 tokio = { version = "1", features = ["macros", "rt"] }
