--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
     "fallback",
     "locale",
-    "progress-future",
+    "stream-future",
     "gal-primitive",
     "gal-runtime",
     "gal-script",
