--- a/utils/gal-runtime/Cargo.toml
+++ b/utils/gal-runtime/Cargo.toml
@@ -8,7 +8,7 @@ gal-bindings-types = { path = "../gal-bindings-types" }
 gal-script = { path = "../gal-script" }
 fallback = { path = "../fallback" }
 locale = { path = "../locale" }
-progress-future = { path = "../progress-future" }
+stream-future = { path = "../stream-future" }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
