--- a/utils/stream-future/Cargo.toml
+++ b/utils/stream-future/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "progress-future"
+name = "stream-future"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-progress-future-impl = { path = "../progress-future-impl" }
+stream-future-impl = { path = "../stream-future-impl" }
 tokio = "1"
 tokio-stream = "0.1"
 pin-project = "1.0"
