--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,16 @@
 version: 2
 updates:
 - package-ecosystem: cargo
-  directory: "/"
+  directory: "/utils"
+  schedule:
+    interval: daily
+
+- package-ecosystem: cargo
+  directory: "/plugins"
+  schedule:
+    interval: daily
+
+- package-ecosystem: cargo
+  directory: "/bins"
   schedule:
     interval: daily
