--- a/utils/gal-runtime/Cargo.toml
+++ b/utils/gal-runtime/Cargo.toml
@@ -19,8 +19,8 @@ wasmer-wasi = "2.3"
 unicode-width = "0.1"
 tokio = { version = "1", features = ["fs", "macros"] }
 tokio-stream = { version = "0.1", features = ["fs"] }
-pin-project = "1.0"
 dirs = "4.0"
+scopeguard = "1.1"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["parking_lot", "rt"] }
