Remove package-lock.json when cleaning.

--- a/bins/gal-gui/Makefile
+++ b/bins/gal-gui/Makefile
@@ -5,6 +5,7 @@ node_modules: package.json
 clean:
 	rm -rf node_modules
 	rm -rf dist
+	rm -f package-lock.json
 
 .PHONY: run dist
 run: node_modules
