--- a/bins/gal-gui/package.json
+++ b/bins/gal-gui/package.json
@@ -14,18 +14,19 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@tauri-apps/api": "^1.0.2",
     "async-mutex": "^0.3.2",
+    "bootstrap": "^5.2.0",
     "bootstrap-dark-5": "^1.1.3",
     "lodash": "^4.17.21",
     "pixi-live2d-display": "^0.4.0-beta.2",
     "pixi.js": "^6.5.2",
     "timers-promises": "^1.0.1",
     "vue": "^3.2.37",
-    "vue-bs-modal": "^0.7.7",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.5",
+    "@types/bootstrap": "^5.2.0",
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
     "@vitejs/plugin-vue": "^3.0.3",
