--- a/utils/ayaka-bindings-types/Cargo.toml
+++ b/utils/ayaka-bindings-types/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
 edition = "2021"
 
 [dependencies]
-fallback = { path = "../fallback" }
 ayaka-script = { path = "../ayaka-script" }
+fallback = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 log = { version = "0.4", features = ["serde"] }
 bitflags = "1.3"
