--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,10 @@ jobs:
   Test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: actions/checkout@v2
       - name: Install dependencies
         run: sudo apt-get install -y libwebkit2gtk-4.0-dev
         if: matrix.os == 'ubuntu-latest'
@@ -20,4 +21,3 @@ jobs:
           rustup target add wasm32-wasi
       - name: Test
         run: make test
-        working-directory: .
