--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,10 @@ jobs:
             os: macos-latest
             target: x86_64-apple-darwin
             postfix:
+          - name: macos-arm64
+            os: macos-latest
+            target: aarch64-apple-darwin
+            postfix:
     runs-on: ${{ matrix.platform.os }}
     steps:
       - uses: actions/checkout@v2
@@ -26,7 +30,10 @@ jobs:
         run: sudo apt-get install -y libwebkit2gtk-4.0-dev
         if: matrix.platform.name == 'linux-x64'
       - name: Install targets
-        run: rustup target add ${{ matrix.platform.target }}
+        run: |
+          rustup target add ${{ matrix.platform.target }}
+          rustup target add wasm32-unknown-unknown
+          rustup target add wasm32-wasi
       - name: Build
         run: make plugins release-cross TARGET=${{ matrix.platform.target }}
       - name: Publish plugins
