--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -8,6 +8,7 @@ tauri-build = { version = "1.0", features = [] }
 
 [dependencies]
 ayaka-runtime = { path = "../../../utils/ayaka-runtime" }
+tokio = { version = "1", features = ["time"] }
 flexi_logger = { version = "0.23", default-features = false, features = ["colors"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
