--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           mdbook-version: 'latest'
       - name: Build book
-        run: make doc
+        run: make book
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
