Add npm update check.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,8 @@ updates:
   directory: "/bins"
   schedule:
     interval: daily
+
+- package-ecosystem: npm
+  directory: "/bins/ayaka-gui"
+  schedule:
+    interval: daily
