--- a/examples/Fibonacci/config.yaml
+++ b/examples/Fibonacci/config.yaml
@@ -3,14 +3,12 @@ author: Berrysoft
 base_lang: en
 paras:
   en:
-    -
-      tag: init
+    - tag: init
       texts:
         - 1
         - \exec{$n = 50; $a = 1; $b = 1; $i = 1; $b}
       next: loop
-    -
-      tag: loop
+    - tag: loop
       texts:
         - \exec{c = $b; $b += $a; $a = c; $i += 1; $b}
       next: \exec{if($i < $n, "loop")}
