--- a/examples/Fibonacci2/config.yaml
+++ b/examples/Fibonacci2/config.yaml
@@ -8,13 +8,11 @@ plugins:
 base_lang: en
 paras:
   en:
-    -
-      tag: init
+    - tag: init
       texts:
         - \exec{$n = random.rnd(50); $a = 1; $b = 1; $i = 1; format.fmt("Starting to calculate Fibonacci {}", $n)}
       next: loop
-    -
-      tag: loop
+    - tag: loop
       texts:
         - \exec{a = $a; b = $b; c = $b; $b += $a; $a = c; $i += 1; format.fmt("{:<11} + {:<11} = {:<11}", a, b, $b)}
       next: \exec{if($i < $n, "loop")}
