--- a/examples/Live2D/config.yaml
+++ b/examples/Live2D/config.yaml
@@ -16,13 +16,5 @@ plugins:
   modules:
     - live2d
 base_lang: ja
-paras:
-  ja:
-    - tag: show
-      texts:
-        - /Haru//おはよう\show
-        - /Haru//元気ですか
-        - /Hiyori//~~~ヾ(＾∇＾)おはよー♪\show{Haru}{Hiyori}
-        - /Hiyori//今日もよろしく\hide{Haru}
-        - /Mao/？？？/お早う\hide
-        - /Mao//元気？\show
+paras: paras
+start: show
