--- a/examples/Styles/config.yaml
+++ b/examples/Styles/config.yaml
@@ -6,24 +6,5 @@ plugins:
     - basictex
     - markdown
 base_lang: en
-paras:
-  en:
-    - tag: md
-      texts:
-        - Markdown examples
-        - '# HEAD'
-        - Normal
-        - '*Italic*'
-        - '**Bold**'
-        - '`code`'
-        - Mixed normal *italic* **bold** `code`.
-      next: tex
-    - tag: tex
-      texts:
-        - LaTeX examples
-        - This is the first line.\par This is the second line.
-        - \textrm{Roman}
-        - \textsf{Sans-serif}
-        - \texttt{Monospace}
-        - Mixed \textrm{Roman} \textsf{Sans-serif} \texttt{Monospace}
-        - \ruby{Ruby}{ruby}
+paras: paras
+start: md
