--- a/bins/ayaka-gui/package.json
+++ b/bins/ayaka-gui/package.json
@@ -9,31 +9,31 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@tauri-apps/api": "^1.0.2",
+    "@tauri-apps/api": "^1.1.0",
     "async-mutex": "^0.4.0",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.2.1",
     "bootstrap-dark-5": "^1.1.3",
     "lodash": "^4.17.21",
-    "pixi-live2d-display": "^0.4.0-beta.2",
-    "pixi.js": "^6.5.2",
+    "pixi-live2d-display": "^0.4.0",
+    "pixi.js": "^6.5.3",
     "timers-promises": "^1.0.1",
-    "vue": "^3.2.37",
+    "vue": "^3.2.39",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.4"
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.0.5",
-    "@types/bootstrap": "^5.2.0",
-    "@types/lodash": "^4.14.184",
-    "@types/node": "^18.7.13",
-    "@vitejs/plugin-vue": "^3.0.3",
+    "@tauri-apps/cli": "^1.1.1",
+    "@types/bootstrap": "^5.2.4",
+    "@types/lodash": "^4.14.185",
+    "@types/node": "^18.7.18",
+    "@vitejs/plugin-vue": "^3.1.0",
     "@vue/tsconfig": "^0.1.3",
     "process": "^0.11.10",
-    "typescript": "~4.8.2",
-    "vite": "^3.0.9",
-    "vue-tsc": "^0.40.1"
+    "typescript": "~4.8.3",
+    "vite": "^3.1.2",
+    "vue-tsc": "^0.40.13"
   }
 }
