--- a/examples/Fibonacci/paras/en/init.yaml
+++ b/examples/Fibonacci/paras/en/init.yaml
@@ -1,9 +1,12 @@
 - tag: init
   texts:
-    - 1
-    - \exec{$n = 50; $a = 1; $b = 1; $i = 1; $b}
+    - '1'
+    - exec: $n = 50; $a = 1; $b = 1; $i = 1;
+    - \var{b}
   next: loop
 - tag: loop
   texts:
-    - \exec{c = $b; $b += $a; $a = c; $i += 1; $b}
-  next: \exec{if($i < $n, "loop")}
+    - exec: c = $b; $b += $a; $a = c; $i += 1;
+    - \var{b}
+    - exec: $next = if($i < $n, "loop")
+  next: \var{next}
