--- a/examples/Fibonacci2/paras/en/init.yaml
+++ b/examples/Fibonacci2/paras/en/init.yaml
@@ -1,4 +1,5 @@
 - tag: init
   texts:
-    - \exec{$n = random.rnd(50); $a = 1; $b = 1; $i = 1; format.fmt("Starting to calculate Fibonacci {}", $n)}
+    - exec: $n = random.rnd(50); $a = 1; $b = 1; $i = 1;
+    - Starting to calculate Fibonacci \var{n}
   next: loop
