--- a/examples/Fibonacci2/paras/en/loop.yaml
+++ b/examples/Fibonacci2/paras/en/loop.yaml
@@ -1,4 +1,6 @@
 - tag: loop
   texts:
-    - \exec{a = $a; b = $b; c = $b; $b += $a; $a = c; $i += 1; format.fmt("{:<11} + {:<11} = {:<11}", a, b, $b)}
-  next: \exec{if($i < $n, "loop")}
+    - exec: $olda = $a; $oldb = $b; c = $b; $b += $a; $a = c; $i += 1;
+    - \var{olda} + \var{oldb} = \var{b}
+    - exec: $next = if($i < $n, "loop");
+  next: \var{next}
