--- a/examples/Gacha/paras/zh-Hans/init.yaml
+++ b/examples/Gacha/paras/zh-Hans/init.yaml
@@ -1,27 +1,27 @@
 - tag: init
   texts:
-    - \exec{$total = 0; $t3 = 0; $t4 = 0; $t5 = 0; $c4 = 0; $c5 = 0;}
+    - exec: $total = 0; $t3 = 0; $t4 = 0; $t5 = 0; $c4 = 0; $c5 = 0;
   next: start
+
 - tag: start
   texts:
-    - |
-      \exec{format.fmt("你共抽了{}次，三星{}个，四星{}个，五星{}个", $total, $t3, $t4, $t5)}
-      \switch{祈愿一次}{$n = 1}
-      \switch{祈愿十次}{$n = 10}
-      \switch{退出}{$n = -1}
-  next: |
-    \exec{
-      $total5 = 0;
-      $total4 = 0;
-      $total3 = 0;
-      $temp5 = $c5;
-      $temp4 = $c4;
-      if($n > 0, "calc")
-    }
+    - 你共抽了\var{total}次，三星\var{t3}个，四星\var{t4}个，五星\var{t5}个
+    - switches:
+      - 祈愿一次||$n = 1
+      - 祈愿十次||$n = 10
+      - 退出||$n = -1
+    - exec: |
+        $total5 = 0;
+        $total4 = 0;
+        $total3 = 0;
+        $temp5 = $c5;
+        $temp4 = $c4;
+        $next = if($n > 0, "calc")
+  next: \var{next}
+
 - tag: calc
   texts:
-    - |
-      \exec{
+    - exec: |
         p = random.rnd(1000);
         current5 = if($temp5 < 73,
           p < 6,
@@ -56,48 +56,54 @@
           $temp5 += 1,
         );
         ayalog.info(if(current5, 5, if(current4, 4, 3)), " star");
-      }
-  next: |
-    \exec{
-      $n -= 1;
-      if($n,
-        "calc",
-        if($total3 + $total4 + $total5 == 1,
-          if($total5,
-            "pull2",
-            if($total4,
-              "pull1",
-              "pull0"
+    - exec: |
+        $n -= 1;
+        $next = if($n,
+          "calc",
+          if($total3 + $total4 + $total5 == 1,
+            if($total5,
+              "pull2",
+              if($total4,
+                "pull1",
+                "pull0"
+              )
+            ),
+            if($total5,
+              "pull4",
+              "pull3"
             )
-          ),
-          if($total5,
-            "pull4",
-            "pull3"
           )
         )
-      )
-    }
+  next: \var{next}
+
 - tag: pull0
   texts:
-    - \video{0}\exec{$total += 1;}
+    - video: 0
+    - exec: $total += 1;
   next: end
 - tag: pull1
   texts:
-    - \video{1}\exec{$total += 1;}
+    - video: 1
+    - exec: $total += 1;
   next: end
 - tag: pull2
   texts:
-    - \video{2}\exec{$total += 1;}
+    - video: 2
+    - exec: $total += 1;
   next: end
+
 - tag: pull3
   texts:
-    - \video{3}\exec{$total += 10;}
+    - video: 3
+    - exec: $total += 10;
   next: end
 - tag: pull4
   texts:
-    - \video{4}\exec{$total += 10;}
+    - video: 4
+    - exec: $total += 10;
   next: end
+
 - tag: end
   texts:
-    - \exec{$t5 += $total5; $t4 += $total4; $t3 += $total3; $c4 = $temp4; $c5 = $temp5;}
+    - exec: $t5 += $total5; $t4 += $total4; $t3 += $total3; $c4 = $temp4; $c5 = $temp5;
   next: start
