--- a/examples/Orga/paras/ja/main.yaml
+++ b/examples/Orga/paras/ja/main.yaml
@@ -1,21 +1,24 @@
 - tag: main
   title: 車の用意し
   texts:
-    - |
-      \ch{rd}団長！車の用意できました！\bg{0}
-      \switch{おう！}{$end = false}
-      \switch{止まるんじゃねぇぞ！}{$end = true}
-      \switch{止まれ！}{}{false}
-  next: \exec{if($end, "end", "walk")}
+    - bg: 0
+    - \ch{rd}団長！車の用意できました！
+    - switches:
+      - おう！||$end = false
+      - 止まるんじゃねぇぞ！||$end = true
+      - 止まれ！|false
+    - exec: $next = if($end, "end", "walk")
+  next: \var{next}
 - tag: walk
   title: 静かだ
   texts:
     - \ch{org}おう！じゃあな。
     - /kdr//はい、お気をつけて。
-    - |
-      /rd//なんか静かですね。街の中にはギャラルホルンもいないし本部とはえらい違いだ。\bg{1}
-      \switch{安全}{}
-      \switch{気を付け}{}{false}
+    - bg: 1
+    - /rd//なんか静かですね。街の中にはギャラルホルンもいないし本部とはえらい違いだ。
+    - switches:
+      - 安全
+      - 気を付け|false
     - /org//ああ。火星の戦力は軒並み向こうに回してんのかもな。
     - /rd//まっそんなのもう関係ないですけどね！
     - /org//上機嫌だな。
@@ -26,14 +29,17 @@
 - tag: gun
   title: 何やってんだよ
   texts:
-    - /td//ぐわっ！\bg{2}
+    - bg: 2
+    - /td//ぐわっ！
     - /rd//団長？何やってんだよ？団長！
     - /org//ぐっ！うおぉ～～！
     - /ass//うおっ！あっ！
-    - /org//はぁはぁはぁ……なんだよ、結構当たんじゃねぇか。ふっ……\bg{3}
+    - bg: 3
+    - /org//はぁはぁはぁ……なんだよ、結構当たんじゃねぇか。ふっ……
     - /rd//だ……団長……あっ……あぁ……
     - /org//なんて声出してやがる……ライド。
-    - /rd//だって……だって……\bgm{0}
+    - bgm: 0
+    - /rd//だって……だって……
     - /org//俺は鉄華団団長オルガ・イツカだぞ。こんくれぇなんてこたぁねぇ。
     - /rd//そんな……俺なんかのために……
     - /org//団員を守んのは俺の仕事だ。
@@ -47,5 +53,7 @@
 - tag: end
   title: 止まるんじゃねぇぞ
   texts:
-    - /org//俺は止まんねぇからよ、お前らが止まんねぇかぎり、その先に俺はいるぞ！\bgm{0}\bg{4}
+    - bg: 4
+    - bgm: 0
+    - /org//俺は止まんねぇからよ、お前らが止まんねぇかぎり、その先に俺はいるぞ！
     - /org//だからよ、止まるんじゃねぇぞ……
