--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0", features = ["cli", "protocol-all", "window-all"] }
 tauri-plugin-localhost = "0.1"
 portpicker = "0.1"
+trylog = "0.1"
 
 [features]
 default = [ "custom-protocol" ]
