--- a/utils/ayaka-script/Cargo.toml
+++ b/utils/ayaka-script/Cargo.toml
@@ -10,6 +10,7 @@ serde_with = "2.0"
 lalrpop-util = { version = "0.19", features = ["lexer"] }
 regex = "1"
 log = "0.4"
+trylog = "0.1"
 
 [dev-dependencies]
 serde_yaml = "0.9"
