feat(releast.yml): modify ghaction let only run in spec folder

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,11 @@
 name: Release
 on:
   push:
-    branches: ["master"]
+    paths:
+      - 'utils/**'
+      - 'bins/**'
+      - 'examples/**'
+      - 'plugins/**'
 jobs:
   Build:
     strategy:
