feat(test.yml): modify ghaction let only run in spec folder
The same as https://github.com/Uni-Gal/Ayaka/commit/d79e56d5777a575211d24a1b81b0ce176b997396

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,11 @@
 name: Test
 on:
   push:
-    branches: ["master"]
+    paths:
+      - 'utils/**'
+      - 'bins/**'
+      - 'examples/**'
+      - 'plugins/**'
   pull_request:
     branches: ["master"]
 jobs:
