feat(book.yml): modify ghaction let only run in spec folder
https://docs.github.com/cn/actions/using-workflows/workflow-syntax-for-github-actions

Below 3 changes all follow this docs's guide.

--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -1,7 +1,12 @@
 name: Book
 on:
   push:
-    branches: ["master"]
+    paths:
+      - 'assets/**'
+      - 'book/**'
+      - 'books/**'
+      - 'docs/**'
+      - '.github/**'
 jobs:
   Book:
     runs-on: ubuntu-latest
