--- a/utils/ayaka-bindings-types/Cargo.toml
+++ b/utils/ayaka-bindings-types/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 
 [dependencies]
 ayaka-script = { path = "../ayaka-script" }
+anyhow = "1.0"
 fallback = "0.1"
 serde = { version = "1.0", features = ["derive"] }
+rmp-serde = "1.1"
 log = { version = "0.4", features = ["serde"] }
 bitflags = "1.3"
