--- a/utils/ayaka-bindings-types/Cargo.toml
+++ b/utils/ayaka-bindings-types/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0", features = ["derive"] }
 rmp-serde = "1.1"
 log = { version = "0.4", features = ["serde"] }
 bitflags = "1.3"
+trylog = "0.2"
