Fix workflow condition.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
 name: Release
 on:
   push:
+    branches: ["master"]
     paths:
       - 'utils/**'
       - 'bins/**'
-      - 'examples/**'
       - 'plugins/**'
 jobs:
   Build:
