--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,9 @@
 name: Test
 on:
   push:
+    branches: ["master"]
     paths:
       - 'utils/**'
-      - 'bins/**'
-      - 'examples/**'
-      - 'plugins/**'
   pull_request:
     branches: ["master"]
 jobs:
