--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -1,12 +1,9 @@
 name: Book
 on:
   push:
+    branches: ["master"]
     paths:
-      - 'assets/**'
       - 'book/**'
-      - 'books/**'
-      - 'docs/**'
-      - '.github/**'
 jobs:
   Book:
     runs-on: ubuntu-latest
