--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "ayaka-script",
     "ayaka-plugin",
     "ayaka-plugin-wasmer",
+    "ayaka-plugin-wasmtime",
     "ayaka-runtime",
 ]
 
