--- a/utils/ayaka-runtime/Cargo.toml
+++ b/utils/ayaka-runtime/Cargo.toml
@@ -30,9 +30,15 @@ ayaka-plugin-wasmer = { path = "../ayaka-plugin-wasmer", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["parking_lot", "rt"] }
+generic-tests = "0.1"
 
 [features]
 default = ["wasmi"]
 wasmi = ["ayaka-plugin-wasmi"]
 wasmtime = ["ayaka-plugin-wasmtime"]
 wasmer = ["ayaka-plugin-wasmer"]
+
+[[test]]
+name = "runtime"
+path = "tests/runtime.rs"
+required-features = ["wasmi", "wasmtime", "wasmer"]
