--- a/bins/Makefile
+++ b/bins/Makefile
@@ -15,8 +15,8 @@ release-cross: dist
 
 .PHONY: run run-gui run-latex
 run:
-	RUST_LOG=info cargo run --package ayaka-check -- $(FILE) --auto
+	cargo run --package ayaka-check -- $(FILE) --auto
 run-gui:
 	cd ayaka-gui && $(MAKE) run FILE=$(FILE)
 run-latex:
-	RUST_LOG=info cargo run --package ayaka-latex -- $(FILE) -o $(basename $(FILE)).tex
+	cargo run --package ayaka-latex -- $(FILE) -o $(basename $(FILE)).tex
