--- a/utils/ayaka-runtime/Cargo.toml
+++ b/utils/ayaka-runtime/Cargo.toml
@@ -15,7 +15,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
 anyhow = "1.0"
-tokio = { version = "1", features = ["macros", "sync"] }
 stream-future = "0.3"
 futures-util = "0.3"
 tryiterator = { git = "https://github.com/Pernosco/tryiterator.git" }
@@ -29,7 +28,7 @@ ayaka-plugin-wasmtime = { path = "../ayaka-plugin-wasmtime", optional = true }
 ayaka-plugin-wasmer = { path = "../ayaka-plugin-wasmer", optional = true }
 
 [dev-dependencies]
-tokio = { version = "1", features = ["parking_lot", "rt"] }
+tokio = { version = "1", features = ["macros", "parking_lot", "rt"] }
 generic-tests = "0.1"
 
 [features]
