--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["cli", "protocol-all", "window-all"] }
 tiny_http = "0.12"
+url = "2.3"
 minreq = "2.6"
 mime_guess = "2.0"
 portpicker = "0.1"
