Use actix_web instead of tiny_http.

--- a/bins/ayaka-gui/Makefile
+++ b/bins/ayaka-gui/Makefile
@@ -9,6 +9,6 @@ clean:
 
 .PHONY: run dist
 run: node_modules
-	npm run tauri dev -- -- --no-default-features -- $(FILE)
+	npm run tauri dev -- -- -- $(FILE)
 dist: node_modules
 	npm run build
