--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -12,11 +12,8 @@ flexi_logger = { version = "0.24", default-features = false, features = ["colors
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["cli", "protocol-all", "window-all"] }
-tiny_http = "0.12"
+actix-web = "4"
+actix-files = "0.6"
 mime_guess = "2.0"
 portpicker = "0.1"
 trylog = "0.2"
-
-[features]
-default = [ "custom-protocol" ]
-custom-protocol = [ "tauri/custom-protocol" ]
