--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -17,3 +17,7 @@ actix-files = "0.6"
 mime_guess = "2.0"
 portpicker = "0.1"
 trylog = "0.2"
+
+[features]
+default = [ "custom-protocol" ]
+custom-protocol = [ "tauri/custom-protocol" ]
