--- a/bins/ayaka-gui/src-tauri/Cargo.toml
+++ b/bins/ayaka-gui/src-tauri/Cargo.toml
@@ -12,6 +12,7 @@ flexi_logger = { version = "0.24", default-features = false, features = ["colors
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["cli", "window-all"] }
+tauri-plugin-window-state = "0.1"
 actix-web = "4"
 actix-files = "0.6"
 trylog = "0.2"
