fix(.github/dependabot.yml): change cargo check to weekly
Docs: https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file#scheduleinterval

Inspired By: https://github.com/osmlab/name-suggestion-index/commit/d7d7d84474146cec29cef68467d556ac3456a89e

Haven't modify npm check because frondend tech-stack dependency update frequently.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,17 +3,17 @@ updates:
 - package-ecosystem: cargo
   directory: "/utils"
   schedule:
-    interval: daily
+    interval: weekly
 
 - package-ecosystem: cargo
   directory: "/plugins"
   schedule:
-    interval: daily
+    interval: weekly
 
 - package-ecosystem: cargo
   directory: "/bins"
   schedule:
-    interval: daily
+    interval: weekly
 
 - package-ecosystem: npm
   directory: "/bins/ayaka-gui"
